contraste fix

--- a/UF-3/Proyecto1/layout/styles/layout.css
+++ b/UF-3/Proyecto1/layout/styles/layout.css
@@ -302,7 +302,7 @@ td{border-width:0 1px;}
 /* Colours
 --------------------------------------------------------------------------------------------------------------- */
 body{color:#474747; background-color:#FFFFFF;}
-a{color:#2798c4;}
+a{color:#003399;}
 a:active, a:focus{background:transparent;}/* IE10 + 11 Bugfix - prevents grey background */
 hr, .borderedbox{border-color:#D7D7D7;}
 label span{color:#FF0000; background-color:inherit;}
@@ -313,14 +313,14 @@ input:focus, textarea:focus, *:required:focus{border-color:#56AED4;}
 .overlay.light{color:#474747;}
 .overlay.light::after{background-color:rgba(255,255,255,.7);}
 
-.btn, .btn.inverse:hover{color:#FFFFFF; background-color:#2798c4; border-color:#2798c4;}
+.btn, .btn.inverse:hover{color:#FFFFFF; background-color:#003399; border-color:#003399;}
 .btn:hover, .btn.inverse{color:inherit; background-color:transparent; border-color:inherit;}
 
 
 /* Rows */
 .row0, .row0 a{color:#FFFFFF; background-color:#000000;}
 .row1{color:#474747; background-color:#FFFFFF;}
-.row2{color:#FFFFFF; background-color:#2798c4;}
+.row2{color:#FFFFFF; background-color:#003399;}
 .row3{color:#474747; background-color:#FFFFFF;}
 .row4{color:#AAAAAA; background-color:#01325D;}
 .row5, .row5 a{color:#AAAAAA; background-color:#012B50;}
@@ -329,16 +329,16 @@ input:focus, textarea:focus, *:required:focus{border-color:#56AED4;}
 
 /* Top Bar */
 #topbar ul li{border-color:rgba(255,255,255,.4);}
-#topbar div:first-of-type li:first-child a{color:#2798c4;}
+#topbar div:first-of-type li:first-child a{color:#003399;}
 
 
 /* Header */
 #header a{color:inherit;}
 #header form label::before{background-color:rgba(0,0,0,.1);}
 #header form label::after{color:#AAAAAA;}
-#header form label:hover::after{color:#2798c4;}
+#header form label:hover::after{color:#003399;}
 #header form label select{color:inherit; background-color:inherit; border-color:rgba(0,0,0,.2);}
-#header form label select option:not(:checked){color:#2798c4;}/* Options that are not selected - https://www.w3.org/TR/selectors/#checked-pseudo */
+#header form label select option:not(:checked){color:#003399;}/* Options that are not selected - https://www.w3.org/TR/selectors/#checked-pseudo */
 #header form label select option:disabled{color:inherit;}
 
 
@@ -349,8 +349,8 @@ input:focus, textarea:focus, *:required:focus{border-color:#56AED4;}
 /* Content Area */
 #introblocks article{box-shadow:0 0 8px rgba(0,0,0,.1);}
 #introblocks article:hover{background-color:rgba(0,0,0,.02);}
-#introblocks article i{color:#2798c4; border-color:#D7D7D7;}
-#introblocks article a > i:hover, #introblocks article:hover i{color:#FFFFFF; background-color:#2798c4; border-color:#2798c4;}
+#introblocks article i{color:#003399; border-color:#D7D7D7;}
+#introblocks article a > i:hover, #introblocks article:hover i{color:#FFFFFF; background-color:#003399; border-color:#003399;}
 
 .overview > li figure a::after{background-color:rgba(0,0,0,.5);}
 .overview > li figure figcaption{color:#FFFFFF;}
@@ -362,33 +362,33 @@ input:focus, textarea:focus, *:required:focus{border-color:#56AED4;}
 
 #footer input, #footer button{border-color:transparent;}
 #footer input{color:#FFFFFF; background-color:#012B50;}
-#footer input:focus{border-color:#2798c4;}
-#footer button{color:#FFFFFF; background-color:#2798c4;}
+#footer input:focus{border-color:#003399;}
+#footer button{color:#FFFFFF; background-color:#003399;}
 
 
 /* Navigation */
-#mainav{color:#FFFFFF; background-color:#2798c4;}
+#mainav{color:#FFFFFF; background-color:#003399;}
 #mainav li a{color:inherit;}
 #mainav .active a, #mainav a:hover, #mainav li:hover > a{color:#01325D; background-color:inherit;}
 #mainav li li a, #mainav .active li a{color:#FFFFFF; background-color:rgba(139,170,214,.5);/* #8BAAD6 */ border-color:rgba(0,0,0,.6);}
-#mainav li li:hover > a, #mainav .active .active > a{color:#01325D; background-color:#2798c4;}
+#mainav li li:hover > a, #mainav .active .active > a{color:#01325D; background-color:#003399;}
 #mainav form select{color:#474747; background-color:#FFFFFF;}
 
 #breadcrumb a{color:inherit; background-color:inherit;}
-#breadcrumb li:last-child a{color:#2798c4;}
+#breadcrumb li:last-child a{color:#003399;}
 
 .container .sidebar nav a{color:inherit; border-color:#D7D7D7;}
-.container .sidebar nav a:hover{color:#2798c4;}
+.container .sidebar nav a:hover{color:#003399;}
 
 .pagination a, .pagination strong{border-color:#D7D7D7;}
-.pagination .current *{color:#FFFFFF; background-color:#2798c4;}
+.pagination .current *{color:#FFFFFF; background-color:#003399;}
 
-#backtotop{color:#FFFFFF; background-color:#2798c4;}
+#backtotop{color:#FFFFFF; background-color:#003399;}
 
 
 /* Tables + Comments */
 table, th, td, #comments .avatar, #comments input, #comments textarea{border-color:#D7D7D7;}
-#comments input:focus, #comments textarea:focus, #comments *:required:focus{border-color:#2798c4;}
+#comments input:focus, #comments textarea:focus, #comments *:required:focus{border-color:#003399;}
 th{color:#FFFFFF; background-color:#373737;}
 tr, #comments li, #comments input[type="submit"], #comments input[type="reset"]{color:inherit; background-color:#FBFBFB;}
 tr:nth-child(even), #comments li:nth-child(even){color:inherit; background-color:#F7F7F7;}
